--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,22 @@
 <resources>
     <string name="app_name">Netrace</string>
     <string name="wifi_logo">Wi-Fi Symbol</string>
-    <string name="title_activity_main2">Main2Activity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
     <string name="cellular_logo">Cell Signal Icon</string>
 
     <string name="speed_mbps">%1$dMbps</string>
     <string name="not_connected">not connected</string>
+
+    <string name="ping_count_label">Count</string>
+    <string name="ping_count_default">5</string>
+
+    <string name="hostname_hint">Hostname</string>
+    <string name="ping_button_text">PING</string>
+
+    <string name="number_sign">#</string>
+    <string name="RTT_label">RTT</string>
+    <string name="TTL_label">TTL</string>
+
+    <string name="nav_home">Home</string>
+    <string name="nav_ping">Ping</string>
 </resources>
